correct site-title wrapping in gallery view (DLC-1027)

--- a/app/javascript/stylesheets/gallery/_base.scss
+++ b/app/javascript/stylesheets/gallery/_base.scss
@@ -40,6 +40,7 @@
 	}
 }
 #site-title {
+	display: inline-block;
 	max-width: 100%;
 	text-align:center;
 	font-size:1.25rem;
@@ -47,6 +48,7 @@
 	color:inherit;
 	text-decoration:none;
 	text-transform: uppercase;
+	white-space: normal;
 }
 
 #secondary-nav {
